--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,7 +36,7 @@ jobs:
           docker build -t sandhya0593/netflix05:latest .
 
       - name: Scan Docker Image with Trivy
-        uses: aquasecurity/trivy-action@v0.12.0
+        uses: aquasecurity/trivy-action@v0.43.0 # Replace with the latest version
         with:
           image-ref: sandhya0593/netflix05:latest
       - name: Push Docker Image
