--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,6 +5,7 @@
 # 3. Builds a Docker image.
 # 4. Scans the Docker image for vulnerabilities using Trivy.
 # 5. Pushes the Docker image to a Docker registry.
+# 6. Updates the Kubernetes deployment file with the new Docker image tag.
 
 name: CI Pipeline
 
@@ -14,10 +15,6 @@ on:
       - '**' # Triggers on every branch commit.
 
 jobs:
-  
-
-  
-
   build-and-push-docker:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
@@ -28,14 +25,26 @@ jobs:
       - name: Log in to DockerHub
         uses: docker/login-action@v2
         with:
-          username: "sandhya0593"# Replace with your DockerHub username
-          password: "HDFC@1998lax"# Replace with your DockerHub password
+          username: "sandhya0593" # Replace with your DockerHub username
+          password: "HDFC@1998lax" # Replace with your DockerHub password
 
       - name: Build Docker Image
         run: |
           docker build -t sandhya0593/netflix05:latest .
 
-      
       - name: Push Docker Image
         run: |
           docker push sandhya0593/netflix05:latest
+
+      - name: Update Kubernetes Deployment
+        run: |
+          sed -i 's|image: sandhya0593/netflixnew:.*|image: sandhya0593/netflix05:latest|' Kubernetes/deployment.yaml
+
+      - name: Commit and Push Changes
+        run: |
+          git config user.name "slax508
+          git config user.email "sankulaxman1998@gmail.com"
+          git add Kubernetes/deployment.yaml
+          git commit -m "Update image to sandhya0593/netflix05:latest"
+          git push
+          
