--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,7 +3,7 @@ name: Node.js CI Pipeline
 on:
   push:
     branches:
-      - main
+      - master
 
 env:
   DOCKER_USERNAME: sandhya0593 # Docker Hub username
