--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,11 +28,13 @@ jobs:
         with:
           java-version: '11'
           distribution: 'temurin'
-      - name: Install Java 11
+     - name: Install Java 11
         run: |
           sudo apt-get update
           sudo apt-get install -y openjdk-11-jdk
-          sudo update-alternatives --set java /usr/lib/jvm/java-11-openjdk/amd64/bin/java
+          # Ensure Java is registered for update-alternatives
+          sudo update-alternatives --install /usr/bin/java java /usr/lib/jvm/java-11-openjdk-amd64/bin/java 1
+          sudo update-alternatives --set java /usr/lib/jvm/java-11-openjdk-amd64/bin/java
           java -version
 
       # Step 3: Run SonarQube analysis
