--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: Node.js CI Pipeline
+name: CI Pipeline
 
 on:
   push:
@@ -14,7 +14,7 @@ env:
   KUBERNETES_DEPLOYMENT_FILE: Kubernetes/deployment.yml # Kubernetes deployment file path
 
 jobs:
-  ci-pipeline:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -28,7 +28,7 @@ jobs:
         with:
           java-version: '11'
           distribution: 'temurin'
-     - name: Install Java 11
+      - name: Install Java 11
         run: |
           sudo apt-get update
           sudo apt-get install -y openjdk-11-jdk
