--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,19 +22,20 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      # Step 2: Install Java 11
-      - name: Set up JDK 11
+      # Step 2: Install Java 17
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
+          java-version: '17'
+          java-package: jdk
           distribution: 'temurin'
-      - name: Install Java 11
+      - name: Install Java 17
         run: |
           sudo apt-get update
-          sudo apt-get install -y openjdk-11-jdk
+          sudo apt-get install -y openjdk-17-jdk
           # Ensure Java is registered for update-alternatives
-          sudo update-alternatives --install /usr/bin/java java /usr/lib/jvm/java-11-openjdk-amd64/bin/java 1
-          sudo update-alternatives --set java /usr/lib/jvm/java-11-openjdk-amd64/bin/java
+            sudo update-alternatives --install /usr/bin/java java /usr/lib/jvm/java-17-openjdk-amd64/bin/java 1
+            sudo update-alternatives --set java /usr/lib/jvm/java-17-openjdk-amd64/bin/java
           java -version
 
       # Step 3: Run SonarQube analysis
