--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,7 +3,7 @@ name: CI Pipeline
 on:
   push:
     branches:
-      - master
+      - master 
 
 env:
   DOCKER_USERNAME: sandhya0593 # Docker Hub username
@@ -50,7 +50,7 @@ jobs:
           projectKey: ${{ env.SONAR_PROJECT_KEY }}
           hostUrl: ${{ env.SONAR_HOST_URL }}
           token: ${{ env.SONAR_TOKEN }}
-    - name: SpnarQube scan
+    - name: SonarQube scan
         run:|
           sonar-scanner -x
     
