--- a/Kubernetes/deployment.yml
+++ b/Kubernetes/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: netflix-app
-        image: sandhya0593/netflixk8s:${IMAGE_TAG}
+        image: sandhya0593/netflixk8s:969aeca425011bde93f3c263f428f95809df139a
         ports:
         - containerPort: 80
